# TacticsCore

./: CMakeLists.txt  main.cpp  readme.md  todo.md
core/: GameEngine.cpp  GameEngine.h  Grid.cpp  Grid.h
entities/: EnemyUnit.cpp  EnemyUnit.h  PlayerUnit.cpp  PlayerUnit.h  Unit.cpp  Unit.h
io/: InputHandler.cpp  InputHandler.h  UIPrinter.cpp  UIPrinter.h
utils/: Position.h
